# libopenusb

branches/libopenusb-1.1.0.3/openusb/: LICENSE  configure.in
branches/libopenusb-1.1.0.3/openusb/doc/: functions.xml  intro.xml
branches/libopenusb-1.1.0.3/openusb/src/: Makefile.am  darwin.h  emulation.c  list.c  list.h  openusb.h.in  sunos.c  usb.c  usbi.h
branches/lock-lint-branch/openusb/: README.in  acconfig.h  autogen.sh
branches/lock-lint-branch/openusb/doc/: api.xml  examples.xml  functions.xml  manual.xml
branches/lock-lint-branch/openusb/examples/: Makefile.am  print_tree.c
branches/lock-lint-branch/openusb/src/: Makefile.am  async.c  descr.h  devices.c  io.c  sunos.c  sunos.h  usb.c  usbi.h  wrapper.h
branches/lock-lint-branch/openusb/tests/: ezusb.c  ezusb.h  testlibusb.c
openusb/: COMPILE.CVS  INSTALL.libusb.in  Makefile.am  README.in  TODO.linux  acconfig.h  autogen.sh  buildmacosx.sh  buildosxframework.sh  configure.in  libusb.spec.in  openusb.spec.in
openusb-code/db/: uuid
openusb-code/db/revprops/0/: 0
openusb/doc/: Makefile.am  examples.xml  functions.xml  intro.xml  website.dsl
openusb/examples/: Makefile.am  print_tree.c
openusb/src/: Makefile.am  api.c  bsd.c  darwin.c  darwin.h  descr.h  descriptors.c  devices.c  emulation.c  io.c  libusb.h.in  linux.c  linux.h  sunos.c  sunos.h  usb.c  usbi.h
openusb/tests/: Makefile.am  ezusb.c  testopenusb.c
trunk/openusb/: ChangeLog  INSTALL.openusb.in  Makefile.am  README.in  autogen.sh  buildlinux.sh  configure.in  openusb-config.in  openusb.kdevelop  openusb.spec.in
trunk/openusb/doc/: Makefile.am  api.xml  examples.xml  functions.xml  intro.xml  manual.xml
trunk/openusb/src/: Makefile.am  api.c  async.c  darwin.c  darwin.h  descriptors.c  devices.c  emulation.c  io.c  libopenusb.h.in  libusb.h.in  linux.c  linux.h  list.c  list.h  openusb.h.in  sunos.c  sunos.h  sync.c  usb.c  usbi.h
trunk/openusb/tests/: testopenusb.c
